// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a visually hidden legend 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders with errorMessage 1`] = `
<fieldset
  aria-describedby="fieldset-with-error-error"
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="fieldset-with-error-error"
      >
        <div
          className="box"
          role="alert"
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap0 columnGap0 xsDirectionColumn"
              >
                <div
                  className="Flex rowGap2 columnGap0 itemsCenter xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <svg
                      aria-hidden={true}
                      aria-label=""
                      className="icon errorIcon iconBlock"
                      height={16}
                      role="img"
                      viewBox="0 0 24 24"
                      width={16}
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              At least 1 item must be selected
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</fieldset>
`;
